fpalace-landing page

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>fpalace landing</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <div class="container">
@@ -171,7 +171,7 @@
             Add To Cart
           </button>
 
-          <h3 style="margin-left: 280px; margin-top: -80px; color: grey">
+          <h3 class="star" style="margin-left: 280px; margin-top: -80px; color: grey">
             &#9733; 8.5
           </h3>
           <h3 style="color: #ff9401; margin-top: 70px; margin-left: 280px">
@@ -198,7 +198,7 @@
             Add To Cart
           </button>
 
-          <h3 style="margin-left: 280px; margin-top: -80px; color: grey">
+          <h3 class="star" style="margin-left: 280px; margin-top: -80px; color: grey">
             &#9733; 9.5
           </h3>
           <h3 style="color: #ff9401; margin-top: 70px; margin-left: 280px">
@@ -225,7 +225,7 @@
             Add To Cart
           </button>
 
-          <h3 style="margin-left: 280px; margin-top: -80px; color: grey">
+          <h3 class="star" style="margin-left: 280px; margin-top: -80px; color: grey">
             &#9733; 8
           </h3>
           <h3 style="color: #ff9401; margin-top: 70px; margin-left: 280px">
@@ -269,7 +269,7 @@
             Simple Way To <br />
             Order Your Food
           </h1>
-          <p
+          <p class="text"
             style="
               margin-left: 20%;
               margin-top: 5%;
@@ -282,7 +282,7 @@
             thing you see on the counter or in the cupboard.
           </p>
 
-          <img
+          <img class="social"
             style="margin-left: 20%; margin-top: 10%; cursor: pointer"
             src="./imgs/Food 5 1.svg"
             alt=""
@@ -339,7 +339,7 @@
       <div class="block-7">
         <div class="box">
           <img class="fruit" src="./imgs/8.svg" alt="" />
-          <img
+          <img class="info"
             style="margin-left: 200px; margin-top: 150px"
             src="./imgs/Group 9832.svg"
             alt=""
